# WebsiteBuilder

./: publishing.cabal  stack.yaml
app/: Main.hs
src/: Webpage.hs
